Quick fix to make tables readable
Full width, black borders, and a bit of padding inside the cells.

--- a/ds_judgements_public_ui/sass/includes/_judgment_text.scss
+++ b/ds_judgements_public_ui/sass/includes/_judgment_text.scss
@@ -15,6 +15,17 @@
     font-size: 1rem;
     max-width: 46rem;
   }
+
+  table {
+    border-collapse: collapse;
+    width: 100%;
+
+    td {
+      border: 1px solid black;
+      padding: 0em 1em;
+    }
+  }
+
 }
 
 .judgment-header {
